samples/_failures_safe/1761207410_db44b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d46812a.c: In function ‘main’:
./samples/SAFE/__tmp_9d46812a.c:148:23: error: expected ‘;’ at end of input
  148 |         destroy_matrix
      |                       ^
      |                       ;
./samples/SAFE/__tmp_9d46812a.c:148:9: error: expected declaration or statement at end of input
  148 |         destroy_matrix
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_9d46812a.c:148:9: error: expected declaration or statement at end of input
